1997-12-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf (CC): Use explicit path for SFI configuration.
	Add gcc28 subconfig for mgd-PSU-Irix5 with two different tclobjcs.
	Likewise for mgd-PSU-GNU/Linux-glibc2. 
	Quote CC argument for .h.xm
	Update Irix 5.3 config to use prefix variables for Tcl and Tk.
	
	* Makefile (dist): Don't match SETUP to the $(SWARMSETUP) case.

	* Makefile.conf (TCLVERS): Upgrade mgd-SFI-Solaris to Tcl 7.6.
	(TKVERS): Upgrade mgd-SFI-Solaris to Tk 4.2.
	(OPTFLAGS): Disable -mv8 in mgd-SFI-Solaris/generic gcc config
	so it can be used for making distributions.

	* Makefile (SWARMDIST): Set to swarm-1.0.4.

1997-12-16  Marcus G. Daniels  <mgd@swarm.santafe.edu>

	* Makefile.conf:  Modify mgd-SFI-GNU/Linux to use prefix vars
	and egcs.

1997-12-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf: Change umich's Tcl, Tk, and TclObjc paths
	from $(HOME) prefixes to /usr/local.

1997-12-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf: Use $(origin CC) to see if the value of CC is the
	default provided by GNU make (e.g. cc), if so change that to gcc.

1997-12-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Release-Notes: Updated for 1.0.4.

1997-12-12  glen e. p. ropella  <gepr@seamus.trail.com>

	* Makefile.conf (CC): specified which compiler to use in OZ

1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf (EXTRACFLAGS): Add -Werror to mgd-SFI-Solaris.
	Use -Wno-implicit-int instead of -Wno-implicit under gcc28.  Use
	-Wno-implicit for egcs (-Wno-implicit-int apparently not
	supported).  Use neither for old gcc.
	Add -Werror and switch to -Wno-implicit-int for glibc2 config
	(now using gcc28).
	Use -Wno-implicit-int -Werror for my Irix 5.3 config too.

1997-12-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.lib, Makefile.appl (nameswap): Remove nameswap targets.
	Symlinks in include/ take care of it.
