@@ -1,5 +1,8 @@
 1997-12-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* Makefile (dist): Use comma instead of slash as delimiter in
+	sed expression.
+
 	* Makefile.conf (CC): Use explicit path for SFI configuration.
 	Add gcc28 subconfig for mgd-PSU-Irix5 with two different tclobjcs.
 	Likewise for mgd-PSU-GNU/Linux-glibc2. 
